--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -32,8 +32,19 @@
 }
 
 .footer-box {
-    display: flex;
     justify-content: space-between;
     padding: 3em 0;
     border-top: 1px solid #666;
 }
+
+.ant-carousel .slick-slide {
+    text-align: center;
+    height: 160px;
+    line-height: 160px;
+    background: #364d79;
+    overflow: hidden;
+  }
+  
+  .ant-carousel .slick-slide h3 {
+    color: #fff;
+  }
