--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,7 +8,7 @@
     color: #37405e;
     opacity: 0.7;
     font-size: 12px;
-    margin-top: 68px;
+    margin-top: 49%;
     float: right;
     text-align: right;
 }
@@ -39,8 +39,8 @@
 
 .ant-carousel .slick-slide {
     text-align: center;
-    height: 160px;
-    line-height: 160px;
+    height: 490px;
+    line-height: 490px;
     background: #364d79;
     overflow: hidden;
   }
