--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,20 +1,21 @@
 .slogan {
     font-weight: bold;
-    color: #37405e;
+    color: #FFF;
+    font-size: 25px;
 }
 
 .small-promo-text {
     width: 209px;
-    color: #37405e;
+    color: #e6f7ff;
     opacity: 0.7;
     font-size: 12px;
-    margin-top: 49%;
+    margin-top: 45%;
     float: right;
     text-align: right;
 }
 
 .subtext-css {
-    color: #37405e;
+    color: #e6f7ff;
     font-family: 'Helvetica';
     font-size: 14px;
     padding-top: 10px;
@@ -26,8 +27,8 @@
 
 @media (min-width: 700px) {
     .post-job-btn {
-        margin-right: -30px;
-        margin-left: 50px;
+        margin-left: 30px;
+        margin-top: 10px;
     }
 }
 
@@ -50,6 +51,7 @@
   }
 
   .intro-text {
-    margin-top: 84px;
+    margin-top: 35px;
+    
   }
 
