--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,11 +5,11 @@ html,
   }
 
   body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Merriweather', serif !important
   }
 
   body.fontLoaded {
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family:'Merriweather', serif
   }
 
   #app {
@@ -19,7 +19,7 @@ html,
 
   p,
   label {
-    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Merriweather', serif;
     line-height: 1.5em;
   }
 
