--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -55,3 +55,28 @@
     margin-top: 35px;
   }
  
+  .image {
+    position: relative;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.h2-absolute {
+    position: absolute;
+    top: 200px;
+    left: 0;
+    width: 100%;
+}
+
+.h2-absolute > span {
+    color: rgb(255, 255, 255);
+    font: bold 22px Helvetica, Sans-Serif;
+    letter-spacing: -1px;
+    background: rgba(0, 39, 36, 0.49);
+    padding: 10px;
+}
+
+.h2-absolute > span.spacer {
+    padding: 0 2px;
+    background: none;
+}
