--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -144,6 +144,10 @@ html,
           background-color: inherit;
           border-top:0 none;
       }
+
+      .logo-img {
+          text-align: center;
+      }
       
       
   }
