--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -31,13 +31,6 @@
 
 }
 
-.wallet-title {
-    background: rgba(27,153,139,1)!important;
-    margin-top: -25px!important;
-    padding: 4%;
-
-}
-
 .wallet-text {
-    text-align: center;
+    margin-top: 5%;
 }
