--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -82,3 +82,9 @@
     padding: 0 2px;
     background: none;
 }
+
+.background-header {
+    background-image: linear-gradient(225deg, #20A3CA 0%, #008D7F 100%);
+    box-shadow: 0 15px 30px 0 rgba(0, 96, 94, 0.3);
+    position:relative
+}
