--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -12,6 +12,21 @@ html,
     font-family:'Roboto'
   }
 
+    @font-face {
+        font-family: dinfont;
+        src: url("/static/fonts/alte-din-1451-mittelschrift/din1451alt.ttf");
+    }
+
+.logo {
+    font-family: dinfont;
+    color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    line-height: 24px;
+    text-align: left;
+}
+
   #app {
     min-height: 100%;
     min-width: 100%;
@@ -204,4 +219,137 @@ html,
 .zammad-chat-header {
     background: #2ec3ab !important;
     height: 3.5em !important;
+}
+
+.menu-item {
+    color: #FFFFFF !important;
+    font-size: 14px !important;
+    font-weight: bold !important;
+    letter-spacing: 0.5px !important;
+    line-height: 17px !important;
+    text-align: left !important;
+}
+.intro-text {
+    padding:100px;
+}
+
+.logo-box {
+    padding: 35px;
+}
+
+.auth-button {
+    border: 1px solid #87C6C1;
+    border-radius: 10px;
+    width: 110px;
+    height: 40px;
+    color: #FFFFFF !important;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 19px;
+    text-align: center;
+}
+
+.stay-up-to-date {
+    color: #FFFFFF;
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
+
+}
+
+
+.email-input {
+    border: 1px solid #87C6C1 !important;
+    border-radius: 10px !important;
+    box-shadow: -5px 10px 30px 0 rgba(0, 96, 94, 0.25) !important;
+    height: 70px !important;
+    width:100%;
+    background: transparent !important;
+}
+
+.email-input::placeholder {
+    color: orange;
+}
+
+.btn-style {
+    color: #008D7F !important;
+    font-size: 18px !important;
+    font-weight: 500 !important;
+    line-height: 22px !important;
+    text-align: center !important;
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    box-shadow: 0 15px 30px 0 rgba(0, 96, 94, 0.3);
+    height: 70px !important;
+    width:100%;
+}
+
+.vbr-btn-style {
+    background-color: #008D7F !important;
+    border-radius: 10px !important;
+    box-shadow: 0 15px 30px 0 rgba(0, 96, 94, 0.3) !important;
+    height: 60px !important;
+}
+
+.vbr-btn-style span{
+    color:#FFF;
+    font-weight: bold;
+}
+
+.coming-soon {
+    color: #FDF81F;
+    font-size: 38px;
+    font-weight: bold;
+    line-height: 46px;
+    text-align: left;
+}
+
+.find-the-job-you-lov {
+    color: #3B3D47;
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 46px;
+    width: 420px;
+    text-align: left;
+}
+
+.choose-from-a-vast-p {
+    color: #3B3D47;
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 25px;
+    width: 420px;
+    text-align: left;
+}
+
+.categories-image {
+    margin:10px;
+    border-radius:10px
+}
+
+.categories-title {
+
+    text-align: center;
+}
+.categories-title span {
+    color: #202C39;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+}
+
+.why-veelancing {
+    color: #3B3D47;
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 46px;
+    text-align: center;
+}
+.we-are-a-decentraliz {
+    color: #202C39;
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 25px;
+    text-align: center;
 }
