--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -94,8 +94,8 @@
     font-weight: 700;
     letter-spacing: 1px;
     line-height: 60px;
-    width: 660px;
     text-align: left;
+    margin-top:20px;
 }
 .a-blockchain-marketp .big {
     font-size: 50px;
@@ -104,3 +104,5 @@
 .a-blockchain-marketp .mid {
     font-size: 20px;
 }
+
+
