--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -290,12 +290,15 @@ html,
     border-radius: 10px !important;
     box-shadow: 0 15px 30px 0 rgba(0, 96, 94, 0.3) !important;
     height: 60px !important;
+    width: 260px !important;
 }
 
 .vbr-btn-style span{
     color:#FFF;
     font-weight: bold;
 }
+
+
 
 .coming-soon {
     color: #FDF81F;
@@ -352,4 +355,124 @@ html,
     font-weight: 400;
     line-height: 25px;
     text-align: center;
+}
+
+.communicate-directly {
+    color: #202C39;
+    font-family: Roboto;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 25px;
+    width: 240px;
+    text-align: left;
+}
+
+.home-paragraph-1 {
+    color: #202C39;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    width: 240px;
+    text-align: left;
+}
+
+.hiw-vbr-btn {
+    background-color: #008D7F;
+    border-radius: 10px;
+    box-shadow: 0 15px 30px 0 rgba(0, 96, 94, 0.3);
+    width: 260px;
+    height: 60px;
+}
+
+.investors-img {
+    width: 1440px;
+    height: 580px;
+    margin-left: 11%;
+    position: relative;
+
+
+}
+
+.investors-title {
+    color: #3B3D47;
+    font-family: Roboto;
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 46px;
+    width: 600px;
+    text-align: left;
+}
+
+.investors-text {
+    color: #202C39;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    width: 600px;
+    text-align: left;
+}
+
+.investors-text-box {
+    position: absolute;
+    top: 1px;
+    left: 7%;
+    padding: 5%;
+
+}
+
+.join-freelancer-title {
+    color: #3B3D47;
+    font-family: Roboto;
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 46px;
+    width: 420px;
+    text-align: left;
+}
+
+.join-freelancer-text {
+    color: #202C39;
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    width: 420px;
+    text-align: left;
+}
+
+.join-freelancer-box{
+    margin-top: 10%;
+}
+
+.launch-time-text {
+    color: #3B3D47;
+    font-family: Roboto;
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 46px;
+    text-align: center !important;
+}
+
+.launch-time-input {
+    background-color: #FFFFFF;
+    border: 1px solid #B1B1B5;
+    border-radius: 10px;
+    box-shadow: -5px 10px 30px 0 rgba(0, 96, 94, 0.25);
+    width: 330px !important;
+    height: 60px !important;
+}
+
+.home-privacy-policy-text {
+
+    color: #3B3D47 !important;
+    font-family: Roboto !important;
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    line-height: 17px !important;
+    width: 249px !important;
+    text-align: center !important;
+    margin-top: 2% !important;
+    margin-left: 44%;
 }
