--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -476,3 +476,10 @@ html,
     margin-top: 2% !important;
     margin-left: 44%;
 }
+
+.rectangle {
+    background-image: linear-gradient(225deg, #20A3CA 0%, #008D7F 100%);
+    box-shadow: 0 15px 30px 0 rgba(0, 96, 94, 0.3);
+    width: 1010px;
+    height: 220px;
+}
