--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -8,6 +8,7 @@ html,
     font-family: 'Roboto';
   }
 
+
   body.fontLoaded {
     font-family:'Roboto'
   }
@@ -483,3 +484,14 @@ html,
     width: 1010px;
     height: 220px;
 }
+
+.invest-in-the-first {
+    color: #FFFFFF;
+    font-family: Roboto;
+    font-size: 50px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    line-height: 60px;
+    width: 660px;
+    text-align: left;
+  }
