--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -439,12 +439,14 @@ html {
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
+    margin-top:50px;
+    margin-bottom:50px;
     width: 420px;
     text-align: left;
 }
 
 .join-freelancer-box{
-    margin-top: 10%;
+    margin-top: 100px;
 }
 
 .launch-time-text {
@@ -621,6 +623,7 @@ html {
     font-size: 38px;
     font-weight: 700;
     text-align: center;
+    margin-bottom: 40px;
 }
 
 .item-f {
@@ -630,4 +633,9 @@ html {
     letter-spacing: 0.5px !important;
     line-height: 17px !important;
     text-align: left !important;
+}
+
+.menu-padding {
+    background: white;
+    padding-bottom: 35px;
 }
