--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -639,3 +639,12 @@ html {
     background: white;
     padding-bottom: 35px;
 }
+
+.loading-start {
+    position: absolute;
+    width: 150px;
+    height: 100px;
+    zIndex: 15;
+    top: 50%;
+    left:50%;
+}
