--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -54,7 +54,9 @@
   .ant-carousel .slick-slide img {display: inline}
 
   .intro-text {
-    margin-top: 35px;
+        margin-top: 35px;
+        padding:10px;
+        margin-bottom:50px;
   }
  
   .image {
