update responsive homepage

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -665,4 +665,7 @@ html {
         font-weight: bold !important;
         letter-spacing: 0.1px !important;
     }
+    .a-blockchain-marketp .big {
+        font-size: 43px !important;
+    }
 }
