--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -58,6 +58,13 @@
         padding:10px;
         margin-bottom:50px;
   }
+
+.intro-text-job {
+    margin-top: 100px;
+    padding:10px;
+    margin-bottom:50px;
+    text-align: center;
+  }
  
   .image {
     position: relative;
