--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -470,14 +470,12 @@ html {
     font-size: 50px;
     font-weight: 700;
     letter-spacing: 1px;
-    line-height: 40px;
+    line-height: 60px;
     width: 660px;
     text-align: left;
     margin-left: 85px;
-
-
-
   }
+
   .stay-up-to-date-and {
     color: #FFFFFF;
     font-family: dinfont;
@@ -487,6 +485,10 @@ html {
     width: 600px;
     text-align: left;
     margin-left: 85px;
+  }
+
+  .stay-up-to-date-and-box {
+    position: absolute;
   }
 
   .count-down {
@@ -518,8 +520,20 @@ html {
     font-family: dinfont;
     font-size: 14px;
     margin-left: 95px;
-    margin-top: 10px;
+    margin-top: 10px !important;
  }
+
+.no-spam-box {
+  position: absolute;
+}
+
+ @media(max-width:815px) {
+ .no-spam {
+   margin-top: 5px;
+   text-align: center !important;
+   margin-left: 1px;
+ }
+}
 
  .get-notified {
    color: #008D7F !important;
@@ -533,16 +547,32 @@ html {
   }
 
   .veelancing-is-a-dece {
-    color: #202C39 !important;
-    font-size: 17px !important;
-    font-weight: 400 !important;
-    width: 600px !important;
-    text-align: left !important;
-  }
+    color: #202C39;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    text-align: left;
+    margin-left: 20px;
+}
 
+
+.veelancing-is-a-dece-box {
+    position: absolute;
+    top: 1px;
+    padding: 5%;
+}
+
+@media(max-width: 815px) {
+.veelancing-is-a-dece {
+  margin-left: 10px;
+}
+}
   .rectangle-copy {
-    background-color: #DEEEED !important;
-    margin-left: 35px !important;
+    margin-top:110px;
+    margin-bottom:100px;
+    background-color: #DEEEED;
+    padding: 60px;
+    
   }
 
   .the-problem {
@@ -551,6 +581,8 @@ html {
     font-weight: 700;
     width: 480px;
     text-align: left;
+    margin-bottom: 15px;
+    margin-left: 20px;
   }
 
   .geometric-particles {
@@ -582,6 +614,13 @@ html {
     width: 600px;
     text-align: left;
   }
+
+  @media(max-width:815px) {
+  .the-blockchain-techn-box {
+    position: absolute;
+    text-align: center;
+  }
+}
 
   .technology-images {
   border: 1px solid #EBEBEC;
@@ -637,7 +676,7 @@ html {
     position: absolute;
     width: 150px;
     height: 100px;
-    zIndex: 15;
+    z-Index: 15;
     top: 50%;
     left:50%;
 }
@@ -686,14 +725,15 @@ html {
 
 @media(max-width: 815px) {
   .invest-in-the-first {
-    margin-left: 10px;
-    font-size: 30px;
+    margin-left: 1px;
+    font-size: 28px;
+    line-height: 40px;
   }
  }
  
  @media(max-width:815px) {
   .stay-up-to-date-and {
-    margin-left: 10px;
+    margin-left: 1px;
     display: inline !important;
     text-align: center;
   }
@@ -701,13 +741,14 @@ html {
 
  @media(max-width:815px){
  .ico-email-reg {
-   margin-left: 50px !important;
+   margin-left: 25px !important;
+   margin-top: 20px !important;
  }
 }
 
 @media(max-width:815px) {
   .get-notified {
-    margin-left: 115px; 
+    margin-left: 90px; 
    }
 }
 
@@ -717,4 +758,19 @@ html {
     height: 250px;
     margin-left: 10px;
   }
+}
+
+@media(max-width:815px) {
+  .tech-particles {
+    margin-right: 20px;
+    
+  }
+}
+
+.our-journey {
+  color: #202C39 !important;
+  font-size: 38px;
+  font-weight: 700;
+  width: 600px;
+
 }
