--- a/src/styles/kyc.css
+++ b/src/styles/kyc.css
@@ -5,6 +5,7 @@
 .kyc-form-btn {
     text-align: center;
     
+    
 }
 
 .kyc-upload-btn {
@@ -36,4 +37,43 @@
     width: 330px !important;
     height: 60px !important;
     margin-left: 12% !important;
+}
+
+.smart-contract-btn {
+    background-color: rgba(0, 141, 127, 0.055) !important;
+    border-radius: 10px !important;
+    box-shadow: 0 15px 30px 0 rgba(0, 96, 94, 0.3) !important;
+    height: 60px !important;
+    width: 260px !important;
+    color: #FFFFFF;
+}
+
+.smart-contract-container {
+    background-image: linear-gradient(225.57deg, #008D7F 0%, #00237C 100%);
+}
+
+.smart-contract-label {
+    color: #FFFFFF;
+}
+
+.smart-contract-submit {
+
+    background-color: #262A3B !important;
+    border-radius: 10px !important;
+    box-shadow: 0 15px 30px 0 rgba(0, 96, 94, 0.3) !important;
+    width: 240px !important;
+    height: 60px !important;
+    color: #FFFFFF !important;
+    font-family: Roboto !important;
+    font-size: 18px !important;
+    font-weight: 500 !important;
+    line-height: 22px !important;
+    text-align: center !important;
+}
+
+.smart-contract-text {
+    color: #FFFFFF !important;
+}
+.smart-contract-milestone{
+    color: #FFFFFF !important;
 }
