--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -569,13 +569,6 @@ label {
   position: absolute;
 }
 
- @media(max-width:815px) {
- .no-spam {
-   margin-top: 5px;
-   text-align: center !important;
-   margin-left: 1px;
- }
-}
 
  .get-notified {
    color: #008D7F !important;
@@ -983,3 +976,18 @@ label {
     height:200px !important;
 }
 
+/*MEDIA QUERIES*/
+
+@media(max-width:975px) {
+    .no-spam {
+        margin-top: 5px;
+        text-align: center !important;
+        margin-left: 1px;
+    }
+    .a-blockchain-marketp .big {
+        font-size: 34px;
+    }
+    .intro-text {
+        margin-top: 30px !important;
+    }
+}
