--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1021,3 +1021,56 @@ h1 {
     font-weight: 600;
     text-transform: uppercase;
 }
+
+.go-top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+.scroll {
+    opacity: 0.3;
+    background-color: aqua;
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    border-radius: 5px;
+    border: none;
+}
+
+.arrow-up {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -9px;
+    margin-left: -5px;
+}
+
+/*MEDIA QUERIES*/
+
+@media(max-width:1200px) {
+    .no-spam {
+        margin-top: 5px;
+        text-align: center !important;
+        margin-left: 1px;
+    }
+    .a-blockchain-marketp .big {
+        font-size: 34px;
+    }
+    .intro-text {
+        margin-top: 30px !important;
+    }
+}
