push latest home version

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -259,7 +259,7 @@ label {
 }
 
 .menu-item {
-    color: #FFFFFF;
+    color: #bbbbbb;
     font-size: 14px;
     font-weight: bold;
     letter-spacing: 0.5px;
