change color to white

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -430,10 +430,11 @@ label {
 }
 
 .investors-text {
-    font-size: 16px;
+    font-size: 17px;
     font-weight: 400;
     line-height: 19px;
     text-align: left;
+    color:#FFF !important;
 }
 
 
