--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1067,3 +1067,13 @@ h1 {
         margin-top: 30px !important;
     }
 }
+
+.ico-tba-titile {
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.ico-tba-text {
+    text-align: center;
+}
+
