--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1114,3 +1114,8 @@ h1 {
     padding-bottom:20px;
 }
 
+.menu-button-responsive {
+    margin-top: 25px;
+    margin-left:10px;
+    color:#FFF;
+}
