--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1118,4 +1118,8 @@ label {
     font-size: 12px;
     color: #e64545;
 }
-
+.ant-calendar-picker-input.ant-input {
+    border: none;
+    height: 57px;
+    border-radius: 13px;
+}
