--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1116,9 +1116,10 @@ label {
 }
 
 .error-text {
-    margin-left: 55px;
+    margin-left: 50px;
     font-size: 12px;
-    color: #e64545;
+    color: #FFF;
+    background:#c10b0b82
 }
 .ant-calendar-picker-input.ant-input {
     border: none;
