--- a/src/styles/hiw.css
+++ b/src/styles/hiw.css
@@ -163,6 +163,7 @@
     font-weight: 700 !important;
     line-height: 48px !important;
     text-align: center !important;
+    margin-top: '3%'!important;
 }
 
 .be-part-btn-text {
