make registration form

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -571,7 +571,7 @@ label {
     color: #FFFFFF;
     font-family: dinfont;
     font-size: 14px;
-    margin-left: 95px;
+    margin-top:5px;
 }
 
 
